--- a/assets/pages/howitworks.html
+++ b/assets/pages/howitworks.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="bio-container">
       <div class="left">
-        <h2>How It Works:</h2>
+        <h2>How It Works</h2>
         <p>
           <span style="color: #66ffff"><b>Sound Capture:</b></span> The
           innovative microphone located on the right side of the ClearHear
