--- a/assets/pages/features.html
+++ b/assets/pages/features.html
@@ -24,62 +24,84 @@
     </div>
     <ul id="features">
       <li>
-        High-Performance Sound Capture: The ClearHear Glasses are equipped with
-        a highly sensitive, multi-directional microphone. This microphone is
-        capable of picking up a wide range of sounds, from quiet conversations
-        to louder public announcements, ensuring no important sound is missed.
+        <span style="color: #66ffff"
+          ><b>High-Performance Sound Capture:</b></span
+        >
+        The ClearHear Glasses are equipped with a highly sensitive,
+        multi-directional microphone. This microphone is capable of picking up a
+        wide range of sounds, from quiet conversations to louder public
+        announcements, ensuring no important sound is missed.
       </li>
+      <br />
       <li>
-        Advanced Noise-Cancellation Technology: Utilizing state-of-the-art
-        noise-cancellation algorithms, the glasses can distinguish between the
-        primary sound source (like speech) and background noise. This results in
-        a clearer, more accurate conversion of speech to text.
+        <span style="color: #66ffff"
+          ><b>Advanced Noise-Cancellation Technology:</b></span
+        >
+        Utilizing state-of-the-art noise-cancellation algorithms, the glasses
+        can distinguish between the primary sound source (like speech) and
+        background noise. This results in a clearer, more accurate conversion of
+        speech to text.
       </li>
+      <br />
       <li>
-        Real-Time Speech-to-Text Conversion: The core feature of ClearHear
-        Glasses is the ability to convert speech to text instantly. This is
-        achieved through sophisticated voice recognition software that can
-        accurately transcribe spoken words into written text at an impressive
-        speed.
+        <span style="color: #66ffff"
+          ><b>Real-Time Speech-to-Text Conversion:</b></span
+        >
+        The core feature of ClearHear Glasses is the ability to convert speech
+        to text instantly. This is achieved through sophisticated voice
+        recognition software that can accurately transcribe spoken words into
+        written text at an impressive speed.
       </li>
+      <br />
       <li>
-        Language Translation and Support: The glasses support multiple
-        languages, making them useful in various linguistic settings. If the
-        speech is in a foreign language, the built-in translation module can
-        translate it into the user's preferred language before converting it to
-        text.
+        <span style="color: #66ffff"
+          ><b>Language Translation and Support:</b></span
+        >
+        The glasses support multiple languages, making them useful in various
+        linguistic settings. If the speech is in a foreign language, the
+        built-in translation module can translate it into the user's preferred
+        language before converting it to text.
       </li>
+      <br />
       <li>
-        Customizable Display Settings: The subtitles are displayed on a
-        transparent, heads-up display on the glasses. Users can customize the
-        appearance of these subtitles, including font size, color, and contrast,
-        to ensure maximum readability and comfort.
+        <span style="color: #66ffff"
+          ><b>Customizable Display Settings:</b></span
+        >
+        The subtitles are displayed on a transparent, heads-up display on the
+        glasses. Users can customize the appearance of these subtitles,
+        including font size, color, and contrast, to ensure maximum readability
+        and comfort.
       </li>
+      <br />
       <li>
-        Intuitive User Interface: Through a connected mobile app, users can
-        easily configure the settings of their glasses. This app allows for the
-        adjustment of language settings, subtitle display options, and even the
-        sensitivity of the microphone.
+        <span style="color: #66ffff"><b>Intuitive User Interface:</b></span>
+        Through a connected mobile app, users can easily configure the settings
+        of their glasses. This app allows for the adjustment of language
+        settings, subtitle display options, and even the sensitivity of the
+        microphone.
       </li>
+      <br />
       <li>
-        Durable and Stylish Design: ClearHear Glasses are designed not only for
-        functionality but also for style and durability. They resemble high-end
-        fashion sunglasses and are built to withstand everyday use.
+        <span style="color: #66ffff"><b>Durable and Stylish Design:</b></span>
+        ClearHear Glasses are designed not only for functionality but also for
+        style and durability. They resemble high-end fashion sunglasses and are
+        built to withstand everyday use.
       </li>
+      <br />
       <li>
-        UV Protection: The glasses also function as regular sunglasses,
-        providing UV protection to the users. This feature makes them ideal for
-        outdoor use.
+        <span style="color: #66ffff"
+          ><b>Battery Life and Eco-Friendly Charging:</b></span
+        >
+        The glasses are equipped with a long-lasting battery, suitable for
+        all-day use. They come with an eco-friendly charging solution,
+        minimizing the environmental impact.
       </li>
+      <br />
       <li>
-        Battery Life and Eco-Friendly Charging: The glasses are equipped with a
-        long-lasting battery, suitable for all-day use. They come with an
-        eco-friendly charging solution, minimizing the environmental impact.
-      </li>
-      <li>
-        Accessibility Features: Additional accessibility features include
-        vibration alerts for notifications and the ability to connect with
-        hearing aids for users who have partial hearing ability.
+        <span style="color: #66ffff"><b>Accessibility Features:</b></span>
+        Additional accessibility features include vibration alerts for
+        notifications and the ability to connect with hearing aids for users who
+        have partial hearing ability.
       </li>
     </ul>
   </body>
