--- a/assets/pages/howitworks.html
+++ b/assets/pages/howitworks.html
@@ -75,7 +75,7 @@
         </p>
       </div>
       <div class="right">
-        <img src="../img/how-it-works.JPG" alt="Annie and Bear" />
+        <img src="../img/how-it-works.jpg" alt="One of ClearHear Glasses" />
       </div>
     </div>
     <script src="../js/scrollAnimation.js"></script>
