--- a/assets/pages/video.html
+++ b/assets/pages/video.html
@@ -25,29 +25,12 @@
       <iframe
         width="560"
         height="315"
-        src="https://www.youtube.com/embed/aUTU-GnxVuM"
+        src="https://youtu.be/VlJNFuP0aYk?si=iCo2gtniDLCK4fvR"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
       ></iframe>
-      <p>
-        Marcin was a quiet and unnoticed bartender in a tavern filled with
-        trouble. One day, a little girl with red hair and a tattered bear
-        entered the tavern and asked for a glass of milk. A bounty hunter at the
-        bar engaged in a conversation with the girl, who revealed that her
-        parents were dead. The girl accidentally dropped a large purse filled
-        with Noxian coins, drawing attention. The bounty hunter tried to take
-        advantage of the situation, but the girl claimed that her bear, Tibbers,
-        had devoured the man who had given her the purse. Chaos ensued as the
-        girl unleashed a burst of fire, causing Marcin to take cover. When he
-        looked again, a monstrous burning bear stood in the flames, holding the
-        lifeless body of the bounty hunter. The girl spoke to the bear,
-        confirming that it didn't like being pulled either. The tavern was
-        engulfed in flames, and the girl and the bear left, leaving behind
-        destruction and thanking Marcin for the milk as they disappeared into
-        the snowy night.
-      </p>
     </div>
   </body>
 </html>
