--- a/assets/pages/features.html
+++ b/assets/pages/features.html
@@ -19,21 +19,17 @@
         <li><a href="./howitworks.html">How It Works</a></li>
       </ul>
     </nav>
-    <div class="skills-container">
-      <h1>Detailed Features of ClearHear Glasses</h1>
-    </div>
-    <ul id="features">
-      <li>
-        <span style="color: #66ffff"
-          ><b>High-Performance Sound Capture:</b></span
-        >
+
+    <h1>CSS grid increase element hover</h1>
+    <div class="grid">
+      <div class="item" tabindex="0">
+        <h3>High-Performance Sound Capture:</h3>
         The ClearHear Glasses are equipped with a highly sensitive,
         multi-directional microphone. This microphone is capable of picking up a
         wide range of sounds, from quiet conversations to louder public
         announcements, ensuring no important sound is missed.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"
           ><b>Advanced Noise-Cancellation Technology:</b></span
         >
@@ -41,9 +37,8 @@
         can distinguish between the primary sound source (like speech) and
         background noise. This results in a clearer, more accurate conversion of
         speech to text.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"
           ><b>Real-Time Speech-to-Text Conversion:</b></span
         >
@@ -51,9 +46,8 @@
         to text instantly. This is achieved through sophisticated voice
         recognition software that can accurately transcribe spoken words into
         written text at an impressive speed.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"
           ><b>Language Translation and Support:</b></span
         >
@@ -61,9 +55,8 @@
         linguistic settings. If the speech is in a foreign language, the
         built-in translation module can translate it into the user's preferred
         language before converting it to text.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"
           ><b>Customizable Display Settings:</b></span
         >
@@ -71,38 +64,34 @@
         glasses. Users can customize the appearance of these subtitles,
         including font size, color, and contrast, to ensure maximum readability
         and comfort.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"><b>Intuitive User Interface:</b></span>
         Through a connected mobile app, users can easily configure the settings
         of their glasses. This app allows for the adjustment of language
         settings, subtitle display options, and even the sensitivity of the
         microphone.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"><b>Durable and Stylish Design:</b></span>
         ClearHear Glasses are designed not only for functionality but also for
         style and durability. They resemble high-end fashion sunglasses and are
         built to withstand everyday use.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"
           ><b>Battery Life and Eco-Friendly Charging:</b></span
         >
         The glasses are equipped with a long-lasting battery, suitable for
         all-day use. They come with an eco-friendly charging solution,
         minimizing the environmental impact.
-      </li>
-      <br />
-      <li>
+      </div>
+      <div class="item" tabindex="0">
         <span style="color: #66ffff"><b>Accessibility Features:</b></span>
         Additional accessibility features include vibration alerts for
         notifications and the ability to connect with hearing aids for users who
         have partial hearing ability.
-      </li>
-    </ul>
+      </div>
+    </div>
   </body>
 </html>
