--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 
       <br />
       <i>
-        <p>
-          "Welcome to a world where sound becomes accessible like never before.
-          ClearHear Glasses are not just a technological breakthrough; they're a
-          gateway to a more inclusive world for the hearing impaired. Experience
-          conversations, music, and the sounds of your environment in a way you
-          never thought possible - through text."
-        </p>
+        <b
+          ><p>
+            "Welcome to a world where sound becomes accessible like never
+            before. ClearHear Glasses are not just a technological breakthrough;
+            they're a gateway to a more inclusive world for the hearing
+            impaired. Experience conversations, music, and the sounds of your
+            environment in a way you never thought possible - through text."
+          </p></b
+        >
       </i>
       <!-- <b> <p>~ ClearHear Glasses</p></b> -->
     </div>
