--- a/assets/pages/features.html
+++ b/assets/pages/features.html
@@ -23,14 +23,15 @@
     <h1>CSS grid increase element hover</h1>
     <div class="grid">
       <div class="item" tabindex="0">
-        <h3>High-Performance Sound Capture:</h3>
+        <!-- <h3>High-Performance Sound Capture:</h3> -->
+        <span style="color: #000"><b>High-Performance Sound Capture:</b></span>
         The ClearHear Glasses are equipped with a highly sensitive,
         multi-directional microphone. This microphone is capable of picking up a
         wide range of sounds, from quiet conversations to louder public
         announcements, ensuring no important sound is missed.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"
+        <span style="color: #000"
           ><b>Advanced Noise-Cancellation Technology:</b></span
         >
         Utilizing state-of-the-art noise-cancellation algorithms, the glasses
@@ -39,7 +40,7 @@
         speech to text.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"
+        <span style="color: #000"
           ><b>Real-Time Speech-to-Text Conversion:</b></span
         >
         The core feature of ClearHear Glasses is the ability to convert speech
@@ -48,7 +49,7 @@
         written text at an impressive speed.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"
+        <span style="color: #000"
           ><b>Language Translation and Support:</b></span
         >
         The glasses support multiple languages, making them useful in various
@@ -56,30 +57,24 @@
         built-in translation module can translate it into the user's preferred
         language before converting it to text.
       </div>
-      <div class="item" tabindex="0">
-        <span style="color: #66ffff"
-          ><b>Customizable Display Settings:</b></span
-        >
-        The subtitles are displayed on a transparent, heads-up display on the
-        glasses. Users can customize the appearance of these subtitles,
-        including font size, color, and contrast, to ensure maximum readability
-        and comfort.
+      <div class="item item-img" tabindex="0">
+        <!-- <img src="../img/features-middle.jpg" alt="features-middle-picture" /> -->
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"><b>Intuitive User Interface:</b></span>
+        <span style="color: #000"><b>Intuitive User Interface:</b></span>
         Through a connected mobile app, users can easily configure the settings
         of their glasses. This app allows for the adjustment of language
         settings, subtitle display options, and even the sensitivity of the
         microphone.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"><b>Durable and Stylish Design:</b></span>
+        <span style="color: #000"><b>Durable and Stylish Design:</b></span>
         ClearHear Glasses are designed not only for functionality but also for
         style and durability. They resemble high-end fashion sunglasses and are
         built to withstand everyday use.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"
+        <span style="color: #000"
           ><b>Battery Life and Eco-Friendly Charging:</b></span
         >
         The glasses are equipped with a long-lasting battery, suitable for
@@ -87,7 +82,7 @@
         minimizing the environmental impact.
       </div>
       <div class="item" tabindex="0">
-        <span style="color: #66ffff"><b>Accessibility Features:</b></span>
+        <span style="color: #000"><b>Accessibility Features:</b></span>
         Additional accessibility features include vibration alerts for
         notifications and the ability to connect with hearing aids for users who
         have partial hearing ability.
