--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <body>
     <nav>
       <ul>
-        <li style="float: left">
+        <!-- style="float: left" -->
+        <li>
           <a class="active" href="./index.html">Home</a>
         </li>
-        <li><a href="assets/pages/video.html">Video</a></li>
-        <li><a href="assets/pages/features.html">Features</a></li>
         <li><a href="assets/pages/howitworks.html">How It Works</a></li>
+        <li><a href="assets/pages/features.html">Features</a></li>
+        <li><a href="assets/pages/video.html">Video</a></li>
       </ul>
     </nav>
     <div id="container">
