--- a/assets/pages/video.html
+++ b/assets/pages/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/story.css" />
+    <link rel="stylesheet" href="../css/video.css" />
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
     <title>Video</title>
   </head>
@@ -14,9 +14,9 @@
         <li style="float: left">
           <a class="active" href="../../index.html">Home</a>
         </li>
-        <li><a href="./video.html">Video</a></li>
-        <li><a href="./features.html">Features</a></li>
         <li><a href="./howitworks.html">How It Works</a></li>
+        <li><a href="./features.html">Features</a></li>
+        <li><a href="./video.html">Video</a></li>
       </ul>
     </nav>
 
