--- a/assets/pages/video.html
+++ b/assets/pages/video.html
@@ -25,7 +25,7 @@
       <iframe
         width="560"
         height="315"
-        src="https://youtu.be/VlJNFuP0aYk?si=iCo2gtniDLCK4fvR"
+        src="https://www.youtube.com/embed/VlJNFuP0aYk"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
